[package]
name = "entrs"
version = "0.1.0"
authors = ["Patrick Haller <patrickhaller40@googlemail.com>"]
edition = "2018"
description = "Run arbitrary commands when files change powered by Rust!"
license = "MIT"
repository = "https://github.com/HallerPatrick/entrs.git"


[dependencies]
failure = "0.1.8"
clap = "3.0.0-beta.1"
notify = "5.0.0-pre.2"
